feat(nGrinder): nGrinder 테스트를 하기 위한 목 설정 진행